[metadata]
name = ephemeral_port_reserve
version = 1.1.4
description = Bind to an ephemeral port, force it into the TIME_WAIT state, and unbind it.
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/Yelp/ephemeral-port-reserve/
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
py_modules = ephemeral_port_reserve
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*

[options.entry_points]
console_scripts =
    ephemeral-port-reserve = ephemeral_port_reserve:main

[options.packages.find]
exclude =
    tests*
    testing*

[wheel]
universal = True
